<package>
  <name>jsk_perception</name>
  <version>1.2.10</version>

  <description>ROS nodes and nodelets for 2-D image perception.</description>
  <author>Manabu Saito</author>
  <author email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</author>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>

  <license>BSD</license>

  <url type="repository">http://github.com/jsk-ros-pkg/jsk_recognition</url>
  <url type="bugtracker">http://github.com/jsk-ros-pkg/jsk_recognition/issues</url>
  <url type="website">https://jsk-docs.readthedocs.io/projects/jsk_recognition/en/latest/jsk_perception</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ALPHABETICAL ORDER -->
  <build_depend>angles</build_depend>
  <build_depend>audio_common_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>git</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_view2</build_depend>
  <build_depend>jsk_data</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>jsk_recognition_utils</build_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <build_depend>libcmt</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>mk</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>opencv_apps</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>posedetection_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roseus</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>robot_self_filter</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <!-- ALPHABETICAL ORDER -->

  <!-- ALPHABETICAL ORDER -->
  <run_depend>angles</run_depend>
  <run_depend>audio_common_msgs</run_depend>
  <run_depend>checkerboard_detector</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_view</run_depend>
  <run_depend>image_view2</run_depend>
  <run_depend>imagesift</run_depend>
  <run_depend>jsk_data</run_depend>
  <run_depend>jsk_gui_msgs</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>
  <run_depend>jsk_recognition_utils</run_depend>
  <run_depend>jsk_rqt_plugins</run_depend>
  <run_depend>jsk_topic_tools</run_depend>
  <run_depend>libcmt</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>mk</run_depend>
  <run_depend>ml_classifiers</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>opencv_apps</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>posedetection_msgs</run_depend>
  <!-- install chainer {{ -->
  <run_depend>python-h5py</run_depend>
  <run_depend>python-chainer-pip</run_depend>
  <run_depend>python-chainercv-pip</run_depend>
  <!-- }} install chainer -->
  <run_depend>python-dlib</run_depend>  <!-- pip -->
  <!-- install fcn {{ -->
  <run_depend>leveldb</run_depend>
  <run_depend>python-fcn-pip</run_depend>  <!-- pip -->
  <!-- }} install fcn -->
  <run_depend>python-sklearn</run_depend>
  <run_depend>python-yaml</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roseus</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>robot_self_filter</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <!-- ALPHABETICAL ORDER -->

  <!-- ALPHABETICAL ORDER -->
  <test_depend>jsk_tools</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>
  <!-- ALPHABETICAL ORDER -->

  <export>
    <nodelet plugin="${prefix}/plugins/nodelet/libjsk_perception.xml"/>
    <nodelet plugin="${prefix}/plugins/nodelet/libopencv_apps.xml"/>
  </export>
</package>
