<package format="3">
  <name>jsk_perception</name>
  <version>1.2.15</version>

  <description>ROS nodes and nodelets for 2-D image perception.</description>
  <author>Manabu Saito</author>
  <author email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</author>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>

  <license>BSD</license>

  <url type="repository">http://github.com/jsk-ros-pkg/jsk_recognition</url>
  <url type="bugtracker">http://github.com/jsk-ros-pkg/jsk_recognition/issues</url>
  <url type="website">https://jsk-docs.readthedocs.io/projects/jsk_recognition/en/latest/jsk_perception</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ALPHABETICAL ORDER -->
  <build_depend>angles</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>git</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_view2</build_depend>
  <build_depend>jsk_data</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>jsk_recognition_utils</build_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <build_depend>libcmt</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>mk</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>opencv_apps</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>posedetection_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roseus</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>robot_self_filter</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <!-- ALPHABETICAL ORDER -->

  <!-- ALPHABETICAL ORDER -->
  <exec_depend>angles</exec_depend>
  <exec_depend>checkerboard_detector</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>image_view2</exec_depend>
  <exec_depend>imagesift</exec_depend>
  <exec_depend>jsk_data</exec_depend>
  <exec_depend>jsk_gui_msgs</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>jsk_recognition_utils</exec_depend>
  <exec_depend>jsk_rqt_plugins</exec_depend>
  <exec_depend>jsk_topic_tools</exec_depend>
  <exec_depend>libcmt</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>mk</exec_depend>
  <exec_depend>ml_classifiers</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>opencv_apps</exec_depend>
  <exec_depend>openni2_launch</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>posedetection_msgs</exec_depend>
  <!-- install chainer {{ -->
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-h5py</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-h5py</exec_depend>
  <exec_depend version_lt="7.0.0">python-chainer-pip</exec_depend>
  <!-- python-cahiner-pip depends: [cython, python-numpy] in rosdep/python.yaml, which is not installable on python3 environment -->
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-chainercv-pip</exec_depend>
  <!-- }} install chainer -->
  <exec_depend>python-dlib</exec_depend>  <!-- pip -->
  <!-- install fcn {{ -->
  <exec_depend>leveldb</exec_depend>
  <exec_depend>python-fcn-pip</exec_depend>  <!-- pip -->
  <!-- }} install fcn -->
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-sklearn</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-sklearn</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roseus</exec_depend>
  <exec_depend>rospack</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sound_play</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>robot_self_filter</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <!-- ALPHABETICAL ORDER -->

  <!-- ALPHABETICAL ORDER -->
  <test_depend>jsk_tools</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>
  <!-- ALPHABETICAL ORDER -->

  <export>
    <nodelet plugin="${prefix}/plugins/nodelet/libjsk_perception.xml"/>
    <nodelet plugin="${prefix}/plugins/nodelet/libopencv_apps.xml"/>
  </export>
</package>
