<?xml version="1.0"?>
<package format="3">
  <name>jsk_recognition_utils</name>
  <version>1.2.15</version>
  <description>C++ library about sensor model, geometrical modeling and perception. </description>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>

  <url type="repository">http://github.com/jsk-ros-pkg/jsk_recognition</url>
  <url type="bugtracker">http://github.com/jsk-ros-pkg/jsk_recognition/issues</url>
  <url type="website">https://jsk-docs.readthedocs.io/projects/jsk_recognition/en/latest/jsk_recognition_utils</url>

  <license>BSD</license>

  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cython</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>jsk_topic_tools</exec_depend>
  <exec_depend>pcl_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend version_lt="7.0.0">python-chainer-pip</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-skimage</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-skimage</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>jsk_tools</test_depend>
  <export>
  </export>
</package>
