<?xml version="1.0"?>
<package format="3">
  <name>jsk_vil_msgs</name>
  <version>0.0.0</version>
  <description>The jsk_vil_msgs package</description>

  <maintainer email="obinata@jsk.imi.i.u-tokyo.ac.jp">Yoshiki Obinatan</maintainer>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <author email="obinata@jsk.imi.i.u-tokyo.ac.jp">Yoshiki Obinata</author>

  <license>BSD</license>

  <depend>actionlib</depend>
  <depend>message_runtime</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>dynamic_reconfigure</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
